# HappytoBeesbackend

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
src/: db.rs  main.rs  schema.rs
src/controllers/: intervention_controller.rs  materiel_controller.rs  mod.rs  poids_controller.rs  production_controller.rs  ruche_controller.rs  session_controller.rs  utilisateur_controller.rs
src/middleware/: auth.rs
src/models/: intervention_models.rs  materiel_models.rs  mod.rs  poids_models.rs  production_models.rs  ruche_models.rs  session_models.rs  utilisateur_models.rs
src/services/: intervention_service.rs  materiel_service.rs  mod.rs  poids_service.rs  production_service.rs  ruche_service.rs  session_service.rs  utilisateur_service.rs
