[package]
name = "HappytoBeesbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7.1"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15"
rand_core = { version = "0.6.4", features = ["getrandom"] }
argon2 = "0.5.0"
log = "0.4"
futures = "0.3"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"